Node.js 20 upgrade

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skill-sample-nodejs-fact-i18n",
-  "version": "2.0.1",
-  "description": "I18n version of fact skill.",
+  "name": "alexa-skill-roll-me-a-character",
+  "version": "2.0.2",
+  "description": "Table top character rolling skill.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
